--- a/style.css
+++ b/style.css
@@ -1,71 +1,74 @@
 * {
     box-sizing: border-box;
-  }
-  
-  
-  body {
+}
+
+body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-  }
-  
-  
-  .header {
+}
+
+.header {
     padding: 80px;
     text-align: center;
-    background: #1abc9c;
+    background: #264992;
     color: white;
-  }
-  
-  
-  .header h1 {
-    font-size: 40px;
-  }
-  
+}
 
-  
-  
-  .row {  
+.header h1 {
+    font-size: 40px;
+}
+
+.row {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-  }
-  
-  
-  .side {
+}
+
+.side {
     -ms-flex: 30%;
     flex: 30%;
     background-color: #f1f1f1;
     padding: 20px;
-  }
-  
- 
-  .main {   
+}
+.city{
+  width: 100%;
+  height: 50px;
+  border: 1px solid blue;
+  text-align: center;
+}
+
+.main {
     -ms-flex: 70%;
     flex: 70%;
     background-color: white;
     padding: 20px;
-  }
-  
-  
-  .City{
+}
+
+.imageCity {
     background-color: #aaa;
     width: 100%;
     padding: 20px;
-  }
-  
-  
-  .footer {
+}
+.weekdays{
+  display: flex;
+  flex-direction: row;
+  width: 150px;
+  height: 150px;
+  border: 1px solid blue;
+}
+
+.footer {
     padding: 20px;
     text-align: center;
     background: #ddd;
-  }
-  
-  /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 700px) {
-    .row {   
-      flex-direction: column;
+}
+
+
+/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
+
+@media screen and (max-width: 700px) {
+    .row {
+        flex-direction: column;
     }
-  }
-  
-  
+}
