--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
     padding: 20px;
 }
 .weekdays{
-  display: flex;
+  display: inline-block;
   justify-content: left;
   flex-direction: row;
   align-items:center;
