--- a/style.css
+++ b/style.css
@@ -44,19 +44,24 @@ body {
     background-color: white;
     padding: 20px;
 }
-
+.general-info{
+    width: 100%;
+  height: 220px;
+  border: 1px solid blue;
+}
 .imageCity {
     background-color: #aaa;
     width: 100%;
     padding: 20px;
 }
+
 .weekdays{
   display: inline-block;
   justify-content: left;
   flex-direction: row;
   align-items:center;
   width: 150px;
-  height: 150px;
+  height: 220px;
   border: 1px solid blue;
 }
 
