--- a/style.css
+++ b/style.css
@@ -26,44 +26,108 @@ body {
 }
 
 .side {
+
+    border-right: 1px solid black;
     -ms-flex: 30%;
     flex: 30%;
     background-color: #f1f1f1;
     padding: 20px;
+    text-align: center;
 }
-.city{
-  width: 100%;
-  height: 50px;
-  border: 1px solid blue;
-  text-align: center;
+
+.city {
+    width: 100%;
+    height: 50px;
+    border: 1px solid rgb(70, 70, 80);
+    text-align: center;
+    padding: 15px;
+
+    
 }
 
 .main {
     -ms-flex: 70%;
     flex: 70%;
     background-color: white;
-    padding: 20px;
+    
 }
-.general-info{
+
+.general-info {
+   text-align: center;
     background-color: rgb(78, 172, 231);
     width: 100%;
-  height: 220px;
-  border: 1px solid rgb(27, 148, 223)e;
+    height: 300px;
+    border: 1px solid rgb(27, 148, 223);
 }
+
+.header-icon{
+     width: 100%;
+    background-color: #264992;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.icon-container{
+    background-color: rgb(78, 172, 231);
+    border-radius: 50%;
+    display:inline;
+ 
+   }
+   .status{
+       font-size: 2rem;
+       font-weight: bold;
+       margin-top: 20px;
+   }
+   .summary{
+    font-size: 1.5rem;
+    font-weight: normal;
+    margin-top: 10px;
+   }
+   .detail-section{
+       display: flex;
+       justify-content: space-between;
+       margin-top: 40px;
+   }
+   .detail{
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       flex-basis: 0;
+       flex-grow: 1;
+       padding: 20px;
+   }
+   .detail .title{
+       font-size: 1rem;
+       flex-grow: 1;
+       font-weight: bold;
+   }
+   .detail .value, h2{
+       font-size: 1rem;
+       margin-top: 20px;
+       font-weight: bold;
+   }
+   .detail .bordered{
+       
+       border-left: 1px solid black;
+       border-right: 1px solid black;
+   }
+  
+
 .imageCity {
     background-color: #aaa;
     width: 100%;
     padding: 20px;
 }
 
-.weekdays{
-  display: inline-block;
-  justify-content: left;
-  flex-direction: row;
-  align-items:center;
-  width: 150px;
-  height: 220px;
-  border: 1px solid blue;
+.weekdays {
+    display: inline-block;
+    justify-content: left;
+    flex-direction: row;
+    align-items: center;
+    width: 150px;
+    height: 220px;
+    border: 1px solid blue;
 }
 
 .footer {
@@ -78,5 +142,6 @@ body {
 @media screen and (max-width: 700px) {
     .row {
         flex-direction: column;
+
     }
 }
