--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ body {
 
 .weekdays {
     display: inline-block;
-    justify-content: left;
+    justify-content: space-between;
     flex-direction: row;
     align-items: center;
     width: 150px;
