--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
    text-align: center;
     background-color: rgb(78, 172, 231);
     width: 100%;
-    height: 300px;
+    height:500px;
     border: 1px solid rgb(27, 148, 223);
 }
 
@@ -96,6 +96,12 @@ body {
        flex-basis: 0;
        flex-grow: 1;
        padding: 20px;
+   }
+   .day{
+     content: url("img/day.png");  
+   }
+   .night{
+    content: url("img/night.png");  
    }
    .detail .title{
        font-size: 1rem;
