--- a/style.css
+++ b/style.css
@@ -107,6 +107,9 @@ body {
    .bignight{
        content: url("img/vincentiu-solomon-ln5drpv_ImI-unsplash.jpg");
    }
+   .bigday{
+       content: url("img/6649503.png");
+   }
    .detail .title{
        font-size: 1rem;
        flex-grow: 1;
