--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 
 .header h1 {
     font-size: 40px;
+    
 }
 
 .row {
@@ -33,7 +34,11 @@ body {
     padding: 20px;
     text-align: center;
 }
-
+.imageCity {
+    background-color: #aaa;
+    width: 100%;
+    padding: 20px;
+}
 .city {
     width: 100%;
     height: 50px;
@@ -70,11 +75,13 @@ body {
 .status {
     font-size: 2rem;
     font-weight: bold;
+    color: #f1f1f1;
     margin-top: 20px;
 }
 
 .summary {
     font-size: 1.5rem;
+    color: #f1f1f1;
     font-weight: normal;
     margin-top: 10px;
 }
@@ -89,6 +96,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: #f1f1f1;
     flex-basis: 0;
     flex-grow: 1;
     padding: 20px;
@@ -105,6 +113,8 @@ body {
 
 .bignight {
     background-image: url("img/vincentiu-solomon-ln5drpv_ImI-unsplash.jpg");
+    background-size: cover;
+  
 }
 
 .bigday {
@@ -114,6 +124,7 @@ body {
 .detail .title {
     font-size: 1rem;
     flex-grow: 1;
+    color: #f1f1f1;
     font-weight: bold;
 }
 
@@ -121,6 +132,7 @@ body {
 h2 {
     font-size: 1rem;
     margin-top: 20px;
+    color: #f1f1f1;
     font-weight: bold;
 }
 
@@ -129,12 +141,16 @@ h2 {
     border-right: 1px solid black;
 }
 
-.imageCity {
-    background-color: #aaa;
-    width: 100%;
-    padding: 20px;
-}
 
+
+
+
+.icon-container{
+  
+   border-radius: 50%;
+   display:inline;
+
+  }
 .weekdays {
     display: inline-block;
     justify-content: space-between;
